galley/testdata/conversion/dataset/networking.istio.io/v1alpha3/destinationRule_expected.json
{
  "istio/networking/v1alpha3/destinationrules": [
    {
      "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.DestinationRule",
      "Metadata": {
        "name": "{{.Namespace}}/tcp-echo-destination"
      },
      "Body": {
        "host": "tcp-echo",
        "subsets": [
          {
            "labels": {
              "version": "v1"
            },
            "name": "v1"
          },
          {
            "labels": {
              "version": "v2"
            },
            "name": "v2"
          }
        ]
      }
    }
  ]
}
