galley/testdata/conversion/dataset/networking.istio.io/v1alpha3/virtualService_expected.json
{
  "istio/networking/v1alpha3/virtualservices": [
    {
      "Metadata": {
        "name": "valid-virtual-service"
      },
      "Body": {
        "hosts": [
          "c"
        ],
        "http": [
          {
            "route": [
              {
                "destination": {
                  "host": "c",
                  "subset": "v1"
                },
                "weight": 75
              },
              {
                "destination": {
                  "host": "c",
                  "subset": "v2"
                },
                "weight": 25
              }
            ]
          }
        ]
      },
      "TypeURL": "type.googleapis.com/istio.networking.v1alpha3.VirtualService"
    }
  ]
}
